# gmail-mcp-server

./: .gitignore  README.md  gmail_service.py  main.py  pyproject.toml  requirements.txt
